# backtester

./: .gitignore  CMakeLists.txt  README.md
scripts/: fetch_data.py
src/: Engine.cpp  Engine.h  Engine.tpp  Event.h  Overloaded.h  csv_parser.cpp  csv_parser.h  main.cpp  ohlcv.cpp  ohlcv.h  stats.cpp  stats.h
src/analysis/: Analytics.cpp  Analytics.h
src/data/: DataFeed.h  EagerCSVFeed.cpp  EagerCSVFeed.h
src/execution/: Broker.cpp  Broker.h  Broker.tpp
src/market/: MarketContext.cpp  MarketContext.h  MarketContext.tpp  MarketEvent.cpp  MarketEvent.h
src/portfolio/: Portfolio.cpp  Portfolio.h  Portfolio.tpp
src/strategy/: Indicators.cpp  Indicators.h  MAC.cpp  MAC.h  Strategy.h
tests/: test_stats.cpp
